--- a/requirement_document/src/document.tex
+++ b/requirement_document/src/document.tex
@@ -6,7 +6,7 @@
 \usepackage{mymacros}
 
 % Constants
-\newcommand{\TheDate}{April 19, 2022}
+\newcommand{\TheDate}{June 16, 2022}
 \newcommand{\TheProject}{CodeJudger}
 
 % Page dimensions
@@ -44,6 +44,13 @@
 \usepackage{array}
 \usepackage{tabularx}
 \usepackage{tabularray}
+\usepackage{float}
+
+% \usepackage[autostyle=false, style=english]{csquotes}
+% \MakeOuterQuote{"}
+
+\usepackage{glossaries}
+\makeglossaries
 
 % \singlespacing
 
