--- a/requirement_document/src/sections/04_usecases/CodeJudgerUserPOV.tex
+++ b/requirement_document/src/sections/04_usecases/CodeJudgerUserPOV.tex
@@ -2,7 +2,7 @@
 \centering
 \begin{tabularx}{\textwidth}{|l|X|}
 \hline
-UC Name & UC\_0 : Initial system view \\ \hline
+UC Name & UC\_Initial\_system\_view \\ \hline
 
 Summary &  CodeJudger is a web\-application that provides all basic needs to learn \& practice coding. The user can watch tutorials, solve different problems of their choices, enter the daily challenge, or ask for help in the forum. \\ \hline
 
@@ -10,15 +10,15 @@ Dependency & This web\-app depends on the database that will store all the exerc
 
 Actors & User \- signs up, logs in, chooses programming language and practices it. \newline Admin \- Can ban or ban users and deals with problems that may arise. \newline Problem setter \- picks exercises to add as daily challenges or regular practice problems. \newline Solver \- provides solution to exercises. \newline Judger \- runs the code entered by user \\ \hline
 
-Preconditions & There must be a leaderboard that keeps track of every user\'s right answers. \newline User must have an account or create one. \newline Admin must check on web\-app frequently to avoid technical problems. \\ \hline
+Preconditions & There must be a leaderboard that keeps track of every users right answers. \newline User must have an account or create one. \newline Admin must check on web\-app frequently to avoid technical problems. \\ \hline
 
-Description of the Main Sequence & 1.	Sign up/ log in \newline 2.	Choose language of your liking \newline 3.	Choose crash course  \newline 4.	Watch through all/some of the tutorial \newline 5.	Go to tournament \newline 6.	Choose the difficulty of the problem \newline 7.	Choose the exercise \newline 8.	Write the answer \newline 9.	Get reaction from solver \newline 10.	If answer isn\'t right, you can see solution from solve or ask on the forum. \newline 11.	See the leaderboard ranking \\ \hline
+Description of the Main Sequence & 1.	Sign up/ log in \newline 2.	Choose language of your liking \newline 3.	Choose crash course  \newline 4.	Watch through all/some of the tutorial \newline 5.	Go to tournament \newline 6.	Choose the difficulty of the problem \newline 7.	Choose the exercise \newline 8.	Write the answer \newline 9.	Get reaction from solver \newline 10.	If answer isnt right, you can see solution from solve or ask on the forum. \newline 11.	See the leaderboard ranking \\ \hline
 
-Descriptoin of the Alternative Sequence & 1.	Sign up/ log in \newline 2.	Choose language of your liking \newline 3.	Go to daily challenge  \newline 4.	Write the answer \newline 5.	Get reaction from solver\newline 6.	If answer isn\'t right, you can see solution from solver or ask on the forum. \newline 7.	See the leaderboard ranking \\ \hline
+Description of the Alternative Sequence & 1.	Sign up/ log in \newline 2.	Choose language of your liking \newline 3.	Go to daily challenge  \newline 4.	Write the answer \newline 5.	Get reaction from solver\newline 6.	If answer isnt right, you can see solution from solver or ask on the forum. \newline 7.	See the leaderboard ranking \\ \hline
 
 Non functional requirements & Credentials should be protected . \newline Small amount of time to retrieve problems and display them. \\ \hline
 
-Postconditoin & User has answered or at least studied an exercise. \\ \hline
+Postcondition & User has answered or at least studied an exercise. \\ \hline
 
 \end{tabularx}
 \end{table}
