--- a/requirement_document/src/sections/04_usecases/usecase_login.tex
+++ b/requirement_document/src/sections/04_usecases/usecase_login.tex
@@ -2,7 +2,7 @@
 \centering
 \begin{tabularx}{\textwidth}{|l|X|}
 \hline
-UC Name & UC code and name goes here \\ \hline
+UC Name & UC\_Login \\ \hline
 
 Summary &  Log\-in phase \\ \hline
 
@@ -14,11 +14,11 @@ Preconditions & \- User must be registered .\newline \- User must not be banned 
 
 Description of the Main Sequence & 1. User opens Home (initial contact with UI)  \newline  2.	User goes to Log In \newline 3.	User enters password and username   \newline4. If the credentials are correct, user is directed to problems  \newline 5. Else, user is prompted with the error messages and tries again for a few times  \newline 6. If logging in fails overall , the user must wait a short time before trying again. \\ \hline
 
-Descriptoin of the Alternative Sequence & 1. User opens Home (initial contact with UI)  \newline  2.	User goes to Log In \newline 3. User selects one icon of social media \newline 4. User puts credentials and presses the Login button \newline5.Credentials are verified and if they are correct, user logs in successfully \newline 6. Else the user is asked to try again \\ \hline
+Description of the Alternative Sequence & 1. User opens Home (initial contact with UI)  \newline  2.	User goes to Log In \newline 3. User selects one icon of social media \newline 4. User puts credentials and presses the Login button \newline5.Credentials are verified and if they are correct, user logs in successfully \newline 6. Else the user is asked to try again \\ \hline
 
 Non functional requirements & Credentials should be protected . \newline Password hashed \\ \hline
 
-Postconditoin & User is logged in \\ \hline
+Postcondition & User is logged in \\ \hline
 
 \end{tabularx}
 \end{table}
