--- a/requirement_document/src/sections/04_usecases/usecase_profileChange.tex
+++ b/requirement_document/src/sections/04_usecases/usecase_profileChange.tex
@@ -2,7 +2,7 @@
 \centering
 \begin{tabularx}{\textwidth}{|l|X|}
 \hline
-UC Name & UC code and name goes here \\ \hline
+UC Name & UC\_Change\_profile \\ \hline
 
 Summary &  Change profile settings \\ \hline
 
@@ -12,13 +12,13 @@ Actors & User (and all subtypes) \\ \hline
 
 Preconditions & User must be logged in \\ \hline
 
-Description of the Main Sequence & 1.	The User opens the \'Settings\' page \newline  2.	User looks over the existing settings \newline 3.	User picks a field whose information he/she wants to be changed and makes the changes \newline 4. User presses \'Save changes\' \\ \hline
+Description of the Main Sequence & 1.	The User opens the Settings page \newline  2.	User looks over the existing settings \newline 3.	User picks a field whose information he/she wants to be changed and makes the changes \newline 4. User presses Save changes \\ \hline
 
-Descriptoin of the Alternative Sequence & 1.	[Step 1\-2 passed] User makes the changes he/she wants made then presses \'Save changes\'\newline 2. User regrets the changes made and he/she presses the \'Revert changes\' button \newline 3.	User peacefully goes back to \'Home\' to see that the changes indeed are reverted and peace is restored \\ \hline
+Description of the Alternative Sequence & 1.	[Step 1\-2 passed] User makes the changes he/she wants made then presses Save changes\newline 2. User regrets the changes made and he/she presses the Revert changes button \newline 3.	User peacefully goes back to Home to see that the changes indeed are reverted and peace is restored \\ \hline
 
 Non functional requirements & Ethical concerns regarding the publicly displayed information \\ \hline
 
-Postconditoin & In the end of the use of the app, the User is happy with the current state of the profile settings \\ \hline
+Postcondition & In the end of the use of the app, the User is happy with the current state of the profile settings \\ \hline
 
 \end{tabularx}
 \end{table}
