--- a/requirement_document/src/sections/04_usecases/usecase_seeProblem.tex
+++ b/requirement_document/src/sections/04_usecases/usecase_seeProblem.tex
@@ -2,7 +2,7 @@
 \centering
 \begin{tabularx}{\textwidth}{|l|X|}
 \hline
-UC Name & UC code and name goes here \\ \hline
+UC Name & UC\_List\_of\_problems \\ \hline
 
 Summary &  See the list of available problems \\ \hline
 
@@ -12,13 +12,13 @@ Actors & User (and subtypes) \\ \hline
 
 Preconditions & \- \\ \hline
 
-Description of the Main Sequence & 1. User opens the webapp \newline  2. User clicks on the navigation abr the \'Problems\' button \newline 3. User is presented with a list of problems and he/she can also choose different filters so that the problems resented are most relevant to the user\'s interests \newline 4. User can also search for the problem using the search bar \\ \hline
+Description of the Main Sequence & 1. User opens the webapp \newline  2. User clicks on the navigation abr the Problems button \newline 3. User is presented with a list of problems and he/she can also choose different filters so that the problems resented are most relevant to the users interests \newline 4. User can also search for the problem using the search bar \\ \hline
 
-Descriptoin of the Alternative Sequence & 1.User opens webapp \newline 2. User clicks the \'Problems \' button \newline 3. User is presented with the list of problems \newline 4. Different icons are put enxt to the problem name which could signify : \newline \- problem is submitted , but not solved \newline \- problem is solved \\ \hline
+Description of the Alternative Sequence & 1.User opens webapp \newline 2. User clicks the Problems  button \newline 3. User is presented with the list of problems \newline 4. Different icons are put enxt to the problem name which could signify : \newline \- problem is submitted , but not solved \newline \- problem is solved \\ \hline
 
 Non functional requirements & Have minimal delay in retrieving problems and displaying them \\ \hline
 
-Postconditoin & A list of different problems is visible to the User \\ \hline
+Postcondition & A list of different problems is visible to the User \\ \hline
 
 \end{tabularx}
 \end{table}
