--- a/requirement_document/src/sections/04_usecases/usecase_seeSol.tex
+++ b/requirement_document/src/sections/04_usecases/usecase_seeSol.tex
@@ -2,9 +2,9 @@
 \centering
 \begin{tabularx}{\textwidth}{|l|X|}
 \hline
-UC Name & UC code and name goes here \\ \hline
+UC Name & UC\_See\_solution \\ \hline
 
-Summary &  See other\'s solutions and ranking \\ \hline
+Summary &  See others solutions and ranking \\ \hline
 
 Dependency & This optional section describes whether the UC depends on other UCs. \\ \hline
 
@@ -12,13 +12,13 @@ Actors & Primarily this use case involves the Solver. Other actors included: Adm
 
 Preconditions & Already have one solution submitted \\ \hline
 
-Description of the Main Sequence & 1.	Go to \'Problems\' page and pick the problem  \newline  2. Press the \'Community solutions\'   \newline 3.	Solver scrolls and sees the ranking of solution (based on the time it took to run) \\ \hline
+Description of the Main Sequence & 1.	Go to Problems page and pick the problem  \newline  2. Press the Community solutions   \newline 3.	Solver scrolls and sees the ranking of solution (based on the time it took to run) \\ \hline
 
-Descriptoin of the Alternative Sequence & 1.	Admin accesses the solutions without having to have submitted a solution beforehand \newline 2. Admin picks a solution \newline 3.	Admin can see all the solutions\'s the specifier Solver has ever provided \\ \hline
+Description of the Alternative Sequence & 1.	Admin accesses the solutions without having to have submitted a solution beforehand \newline 2. Admin picks a solution \newline 3.	Admin can see all the solutionss the specifier Solver has ever provided \\ \hline
 
 Non functional requirements & \- \\ \hline
 
-Postconditoin & \- \\ \hline
+Postcondition & \- \\ \hline
 
 \end{tabularx}
 \end{table}
