--- a/requirement_document/src/sections/04_usecases/usecase_submit.tex
+++ b/requirement_document/src/sections/04_usecases/usecase_submit.tex
@@ -2,7 +2,7 @@
 \centering
 \begin{tabularx}{\textwidth}{|l|X|}
 \hline
-UC Name & UC code and name goes here \\ \hline
+UC Name & UC\_Submit\_solution \\ \hline
 
 Summary &  User attempts a solution \\ \hline
 
@@ -14,11 +14,11 @@ Preconditions & \- limited number of total submissions in the queue \newline \- 
 
 Description of the Main Sequence & 1. Solver picks the problem of choice and reads the problem statement and constraints  \newline  2.	Solver chooses his/her preferred language \newline 3. Solver is promted with the template of solution in the comments \newline 4. Solver writes the assumed solution and Submits it. \newline 5. Behind the scenes , the solution will go through many test cases. \newline 6. The application will direct the user to the percentile in which his/her solution fall in. \newline 6. Else, the solver will try another submission \\ \hline
 
-Descriptoin of the Alternative Sequence & 1. The Solver is past the steps 1\-3 in the main sequence \newline 2. Solver presses the \'Run\' button as a preliminary step in verifying the correctness. \newline 3. The solution either passes the test or not \newline 4. If the solution does not pass the test, the Solver changes the solution without submitting it.  \newline 5. Else , the Solver submits the solution and waits for the results \\ \hline
+Description of the Alternative Sequence & 1. The Solver is past the steps 1\-3 in the main sequence \newline 2. Solver presses the Run button as a preliminary step in verifying the correctness. \newline 3. The solution either passes the test or not \newline 4. If the solution does not pass the test, the Solver changes the solution without submitting it.  \newline 5. Else , the Solver submits the solution and waits for the results \\ \hline
 
 Non functional requirements & \- \\ \hline
 
-Postconditoin & In the end, the Solver will either have solved the problem or not. \\ \hline
+Postcondition & In the end, the Solver will either have solved the problem or not. \\ \hline
 
 \end{tabularx}
 \end{table}
