--- a/requirement_document/src/sections/04_usecases/usecase_viewMetrics.tex
+++ b/requirement_document/src/sections/04_usecases/usecase_viewMetrics.tex
@@ -2,7 +2,7 @@
 \centering
 \begin{tabularx}{\textwidth}{|l|X|}
 \hline
-UC Name & UC code and name goes here \\ \hline
+UC Name & UC\_View\_Metrics \\ \hline
 
 Summary &  Admin views system metrics \\ \hline
 
@@ -12,13 +12,13 @@ Actors & Admin \\ \hline
 
 Preconditions & \- \\ \hline
 
-Description of the Main Sequence & 1.	Open \'Home\' \newline  2. Press \'System metrics\' \newline 3. Click on the resource whose info you ar interested \newline 4. See the metric for the specific resource \newline 5. If the metrics are below a certain threshold, Admin takes necessary actions  <br > 6. Else, go back to \'Home\' \\ \hline
+Description of the Main Sequence & 1.	Open Home \newline  2. Press System metrics \newline 3. Click on the resource whose info you ar interested \newline 4. See the metric for the specific resource \newline 5. If the metrics are below a certain threshold, Admin takes necessary actions  <br > 6. Else, go back to Home \\ \hline
 
-Descriptoin of the Alternative Sequence & \- \\ \hline
+Description of the Alternative Sequence & \- \\ \hline
 
 Non functional requirements & \- \\ \hline
 
-Postconditoin & System metrics have been checked by the Admin \\ \hline
+Postcondition & System metrics have been checked by the Admin \\ \hline
 
 \end{tabularx}
 \end{table}
