--- a/requirement_document/src/sections/99_appendix.tex
+++ b/requirement_document/src/sections/99_appendix.tex
@@ -1,3 +1,379 @@
 \appendix
-\section{First}
-\section{Second}
+\section{Glossary}
+\pagebreak
+
+\vspace*{\fill}
+\section{Diagrams}
+\vspace*{\fill}
+\pagebreak
+
+\vspace*{\fill}
+\subsection*{Activity}
+\vspace*{\fill}
+\pagebreak
+
+\begin{figure}[H]
+    \centering
+    \scalebox{0.8}{
+    \includegraphics[width=\columnwidth]{../../diagrams/Activity/activity_1.png}
+    }
+    \caption{Authorization swimlane}
+\end{figure}
+\pagebreak
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\columnwidth]{../../diagrams/Activity/activity_2.png}
+    \caption{Admin swimlane}
+\end{figure}
+\pagebreak
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\columnwidth]{../../diagrams/Activity/activity_3.png}
+    \caption{Problem Setter swimlane}
+\end{figure}
+\pagebreak
+
+\begin{figure}[H]
+    \centering
+    \scalebox{0.75}{
+    \includegraphics[width=\columnwidth]{../../diagrams/Activity/AddServer.png}
+    }
+    \caption{Adding a Judger server}
+\end{figure}
+\pagebreak
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\columnwidth]{../../diagrams/Activity/AdmBansUser.png}
+    \caption{Banning a user}
+\end{figure}
+\pagebreak
+
+\begin{figure}[H]
+    \centering
+    \scalebox{0.75}{
+    \includegraphics*[width=\columnwidth]{../../diagrams/Activity/CreateAproblem.png}
+    }
+    \caption{Create a problem}
+\end{figure}
+\pagebreak
+
+\begin{figure}[H]
+    \centering
+    \scalebox{0.9}{
+    \includegraphics*[width=\columnwidth]{../../diagrams/Activity/FlagProblem.png}
+    }
+    \caption{Flag a problem}
+\end{figure}
+\pagebreak
+
+\begin{figure}[H]
+    \centering
+    \scalebox{0.9}{
+    \includegraphics*[width=\columnwidth]{../../diagrams/Activity/FlagProblem.png}
+    }
+    \caption{Flag a problem}
+\end{figure}
+\pagebreak
+
+\begin{figure}[H]
+    \centering
+    % \scalebox{0.9}{
+    \includegraphics*[width=\columnwidth]{../../diagrams/Activity/LoginWaysUpdated.png}
+    % }
+    \caption{Login means}
+\end{figure}
+\pagebreak
+
+\begin{figure}[H]
+    \centering
+    % \scalebox{0.9}{
+    \includegraphics*[width=\columnwidth]{../../diagrams/Activity/SubmitSolutionUpdated.png}
+    % }
+    \caption{Submit a solution}
+\end{figure}
+\pagebreak
+
+
+\vspace*{\fill}
+\subsection*{Sequence}
+\vspace*{\fill}
+\pagebreak
+
+\begin{figure}[H]
+    \centering
+    \scalebox{0.8}{
+    \includegraphics*[width=\columnwidth]{../../diagrams/Sequence/ContestFetch-1.png}
+    }
+    \caption{Contest fetching sequence diagram}
+\end{figure}
+\pagebreak
+
+\begin{figure}[H]
+    \centering
+    \scalebox{0.8}{
+    \includegraphics*[width=\columnwidth]{../../diagrams/Sequence/LanguageFetch-1.png}
+    }
+    \caption{Language fetching sequence diagram}
+\end{figure}
+\pagebreak
+
+\begin{figure}[H]
+    \centering
+    \scalebox{0.8}{
+    \includegraphics*[width=\columnwidth]{../../diagrams/Sequence/Login-1.png}
+    }
+    \caption{Login sequence diagram}
+\end{figure}
+\pagebreak
+
+\begin{figure}[H]
+    \centering
+    \scalebox{0.8}{
+    \includegraphics*[width=\columnwidth]{../../diagrams/Sequence/LoginSocial-1.png}
+    }
+    \caption{Social login sequence diagram}
+\end{figure}
+\pagebreak
+
+\begin{figure}[H]
+    \centering
+    \scalebox{0.8}{
+    \includegraphics*[width=\columnwidth]{../../diagrams/Sequence/ProblemFetch-1.png}
+    }
+    \caption{Problem fetching sequence diagram}
+\end{figure}
+\pagebreak
+
+\begin{figure}[H]
+    \centering
+    \scalebox{0.90}{
+    \includegraphics*[width=\columnwidth]{../../diagrams/Sequence/SubmissionPost-1.png}
+    }
+    \caption{Posting a submission}
+\end{figure}
+\pagebreak
+
+\begin{figure}[H]
+    \centering
+    \scalebox{0.8}{
+    \includegraphics*[width=\columnwidth]{../../diagrams/Sequence/TagFetch-1.png}
+    }
+    \caption{Fetching a tag}
+\end{figure}
+\pagebreak
+
+\begin{figure}[H]
+    \centering
+    \scalebox{0.9}{
+    \includegraphics*[width=\columnwidth]{../../diagrams/Sequence/UserFetch-1.png}
+    }
+    \caption{Fetching a user}
+\end{figure}
+\pagebreak
+
+\vspace*{\fill}
+\subsection*{Collaboration}
+\vspace*{\fill}
+\pagebreak
+
+\begin{landscape} 
+    \begin{figure}[H]
+        \centering
+        \scalebox{0.9}{
+        \includegraphics*[width=\columnwidth]{../../diagrams/Collaboration/collaboration1.png}
+        }
+        \caption{Login}
+    \end{figure}
+    \pagebreak
+
+    \begin{figure}[H]
+        \centering
+        \scalebox{0.9}{
+        \includegraphics*[width=\columnwidth]{../../diagrams/Collaboration/collaboration2.png}
+        }
+        \caption{Login with socials}
+    \end{figure}
+    \pagebreak
+\end{landscape}
+
+\vspace*{\fill}
+\subsection*{Class}
+\vspace*{\fill}
+\pagebreak
+
+\begin{landscape} 
+    \begin{figure}[h]
+        \centering
+        \scalebox{0.6}{
+        \includegraphics*[width=\columnwidth]{../../diagrams/Class/class1.png}
+        }
+        \caption{Problem schema}
+    \end{figure}
+
+    \begin{figure}[h]
+        \centering
+        \scalebox{0.9}{
+        \includegraphics*[width=\columnwidth]{../../diagrams/Class/class2.png}
+        }
+        \caption{ORM Model}
+    \end{figure}
+
+    \begin{figure}[h]
+        \centering
+        \scalebox{0.9}{
+        \includegraphics*[width=\columnwidth]{../../diagrams/Class/class3.png}
+        }
+        \caption{CRUD services}
+    \end{figure}
+
+    \begin{figure}[h]
+        \centering
+        \scalebox{0.5}{
+        \includegraphics*[width=\columnwidth]{../../diagrams/Class/class4.png}
+        }
+        \caption{Item ang language schemas}
+    \end{figure}
+
+    \begin{figure}[h]
+        \centering
+        \scalebox{0.5}{
+        \includegraphics*[width=\columnwidth]{../../diagrams/Class/class5.png}
+        }
+        \caption{Problem manifest}
+    \end{figure}
+
+    \begin{figure}[h]
+        \centering
+        \scalebox{0.8}{
+        \includegraphics*[width=\columnwidth]{../../diagrams/Class/class6.png}
+        }
+        \caption{Problem Managers}
+    \end{figure}
+
+    \begin{figure}[h]
+        \centering
+        \scalebox{0.8}{
+        \includegraphics*[width=\columnwidth]{../../diagrams/Class/class9.png}
+        }
+        \caption{Tag schemas}
+    \end{figure}
+
+\end{landscape}
+
+
+\begin{figure}[h]
+    \centering
+    \scalebox{0.8}{
+    \includegraphics*[width=\columnwidth]{../../diagrams/Class/class8.png}
+    }
+    \caption{User schema}
+\end{figure}
+
+\begin{figure}[h]
+    \centering
+    \scalebox{0.8}{
+    \includegraphics*[width=\columnwidth]{../../diagrams/Class/class7.png}
+    }
+    \caption{Settings}
+\end{figure}
+
+\vspace*{\fill}
+\subsection*{State}
+\vspace*{\fill}
+
+\begin{landscape}
+    \begin{figure}[h]
+        \centering
+        \scalebox{0.8}{
+        \includegraphics*[width=\columnwidth]{../../diagrams/State/submitProblem.png}
+        }
+        \caption{The state of the Problem}
+    \end{figure}
+
+    \begin{figure}[H]
+        \centering
+        \scalebox{0.9}{
+        \includegraphics*[width=\columnwidth]{../../diagrams/State/general.png}
+        }
+        \caption{The state of a Problem attempt}
+    \end{figure}
+
+    \begin{figure}[H]
+        \centering
+        \scalebox{0.8}{
+        \includegraphics*[width=\columnwidth]{../../diagrams/State/createContest.png}
+        }
+        \caption{The state of the Contest feature}
+    \end{figure}
+    
+    \begin{figure}[H]
+        \centering
+        \scalebox{0.8}{
+        \includegraphics*[width=\columnwidth]{../../diagrams/State/createContest.png}
+        }
+        \caption{State of a User}
+    \end{figure}
+\end{landscape}
+\pagebreak
+
+
+\subsection*{ERD}
+\begin{figure}[H]
+    \centering
+    % \scalebox{0.9}{
+    \includegraphics*[width=\columnwidth]{../../diagrams/ERD/ERD_1-1.png}
+    % }
+    \caption{The first sketch for the ERD, then the modelling was done code-first}
+\end{figure}
+
+\vspace*{\fill}
+\subsection*{Gantt chart}
+\vspace*{\fill}
+\pagebreak
+
+\begin{landscape}
+    \begin{figure}
+        \centering
+        \includegraphics[width=0.9\columnwidth]{../../diagrams/Gantt/Gantt_1-1.png}
+        \caption{The Gantt chart utilized for the first part of the project.}
+    \end{figure}
+\end{landscape}
+\pagebreak
+
+\vspace*{\fill}
+\subsection*{DFD}
+\vspace*{\fill}
+\pagebreak
+
+
+\begin{landscape}
+    \begin{figure}
+        \centering
+        \includesvg[width=0.9\columnwidth]{../../diagrams/DFD/level_0.svg}
+        \caption{Data Flow Diagram level 0}
+    \end{figure}
+\end{landscape}
+\pagebreak
+
+
+\begin{landscape}
+    \begin{figure}
+        \centering
+        \includegraphics[width=0.9\columnwidth]{../../diagrams/DFD/level_1.png}
+        \caption{Data Flow Diagram level 1}
+    \end{figure}
+\end{landscape}
+\pagebreak
+
+
+\begin{landscape}
+    \begin{figure}
+        \centering
+        \includegraphics[width=0.7\columnwidth]{../../diagrams/DFD/level_2.png}
+        \caption{Data Flow Diagram level 2}
+    \end{figure}
+\end{landscape}
+\pagebreak
