--- a/requirement_document/src/sections/04_usecases/DailyChallangeTable.tex
+++ b/requirement_document/src/sections/04_usecases/DailyChallangeTable.tex
@@ -2,11 +2,11 @@
 \centering
 \begin{tabularx}{\textwidth}{|l|X|}
 \hline
-UC Name & Daily challanges \\ \hline
+UC Name & UC\_Daily\_challenge \\ \hline
 
 Summary &  Every day the user logs into our software there will be a challange available for him to solve, which changes daily. \\ \hline
 
-Dependency & Doesn\'t depend on previous User case other than the user would nneed to have an account. \\ \hline
+Dependency & Doesnt depend on previous User case other than the user would nneed to have an account. \\ \hline
 
 Actors & User \newline Admin \\ \hline
 
@@ -14,11 +14,11 @@ Preconditions & \-User has logged on \newline \-Has an account on our software \
 
 Description of the Main Sequence & 1.	User logs onto our service.  \newline  2.	User clicks Daily Challenge prompt \newline 3.	User will be shown the daily challenge coding question  \newline4.	User submits an answer (the coding language will be specified) \newline5.	Timer will be shown determining the time for the next daily challenge \\ \hline
 
-Descriptoin of the Alternative Sequence & 1. User answers the question with a different coding language: \newline\- Program rejects his answer and demand it be written in the specified coding language only  \newline2a. User gets answer right: \newline\-	User receives points\newline\-	Use case procceds as normal with step 5\newline2b. User gets answer wrong: \newline\-	User recievees no point but emotional support to try again, possibly in a form of a cute cat photo. \newline\-	Use case procceds as normal with step 5 \\ \hline
+Description of the Alternative Sequence & \- \\ \hline
 
 Non functional requirements & User should get the answer quickly, no matter the outcome the user only recieves one chance to answer the daily challange and must wait for the next one to try again. \\ \hline
 
-Postconditoin & Doesn\'t allow further submissions (any user can only submit once) \\ \hline
+Postcondition & Doesnt allow further submissions (any user can only submit once) \\ \hline
 
 \end{tabularx}
 \end{table}
