Final requirement touches

--- a/requirement_document/src/document.tex
+++ b/requirement_document/src/document.tex
@@ -45,12 +45,13 @@
 \usepackage{tabularx}
 \usepackage{tabularray}
 \usepackage{float}
+\usepackage{fancybox}
+\usepackage[final]{pdfpages}
 
 % \usepackage[autostyle=false, style=english]{csquotes}
 % \MakeOuterQuote{"}
 
 \usepackage{glossaries}
-\makeglossaries
 
 % \singlespacing
 
