--- a/requirement_document/src/sections/99_appendix.tex
+++ b/requirement_document/src/sections/99_appendix.tex
@@ -1,5 +1,6 @@
 \appendix
 \section{Glossary}
+\input{sections/glossary/glossary.tex}
 \pagebreak
 
 \vspace*{\fill}
@@ -377,3 +378,10 @@
     \end{figure}
 \end{landscape}
 \pagebreak
+
+\vspace*{\fill}
+\section{API spec}
+\vspace*{\fill}
+\pagebreak
+
+\includepdf[pages=-]{./sections/api_spec/api.pdf}
